[package]
edition = "2021"
name = "ppaass-agent-windows"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppaass_agent_lib"
path = "src/lib.rs"

[[bin]]
name = "ppaass-agent-windows"
path = "src/bin/bin.rs"

[dependencies]
ppaass-protocol={git = "https://github.com/quhxuxm/ppaass-protocol.git", branch = "main"}
ppaass-codec={git = "https://github.com/quhxuxm/ppaass-codec.git", branch = "main"}
ppaass-crypto={git = "https://github.com/quhxuxm/ppaass-crypto.git", branch = "main"}
lazy_static="1.4"
log="0.4"
log4rs = "1.2"
anyhow="1.0"
tokio = {version="1.33", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"]}
toml="0.8"
thiserror="1.0"
serde_derive="1.0"
serde="1.0"
bytes="1.5"
futures-util="0.3"
futures="0.3"
futures-channel="0.3"
tokio-stream= "0.1"
pin-project="1.1"
tokio-util = "0.7"
uuid={version="1.6", features = ["v4"] }
pretty-hex="0.4"
rand = { version = "0.8", features = [] }
bytecodec = "0.4"
url = "2.4"
async-trait = "0.1"
httpcodec = "0.2"
derive_more = "0.99"