[package]
edition = "2021"
name = "ppaass-agent"
version = "0.1.15"
license = "MIT"
description = "The agent part of the ppaass application"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ppaass-agent"
path = "src/bin/start.rs"

[lib]
path = "src/lib.rs"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
mimalloc = "0.1.39"
ppaass-protocol = "0.1"
ppaass-codec = "0.1"
ppaass-crypto = "0.1"
tokio = { version = "1.35", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"] }
toml = "0.8"
thiserror = "1.0"
serde_derive = "1.0"
serde = "1.0"
bytes = "1.5"
futures-util = "0.3"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
uuid = { version = "1.6", features = ["v4"] }
pretty-hex = "0.4"
rand = { version = "0.8", features = [] }
bytecodec = "0.4"
url = "2.4"
httpcodec = "0.2"
derive_more = "0.99"
tokio-io-timeout = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json"] }
tracing-appender = "0.2"
clap = { version = "4.5", features = ["derive"] }