[package]
edition = "2021"
name = "ppaass-agent"
version = "0.1.32"
license = "MIT"
description = "The agent part of the ppaass application"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ppaass-agent"
path = "src/bin/start.rs"

[lib]
path = "src/lib.rs"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
mimalloc = "0"
ppaass-protocol = "0"
ppaass-codec = "0"
ppaass-crypto = "0"
tokio = { version = "1", features = ["macros", "time", "net", "io-util", "rt-multi-thread", "fs"] }
toml = "0"
thiserror = "1"
serde_derive = "1"
serde = "1"
bytes = "1"
futures-util = "0"
futures = "0"
tokio-stream = "0"
tokio-util = "0"
uuid = { version = "1", features = ["v4"] }
pretty-hex = "0"
rand = { version = "0", features = [] }
bytecodec = "0"
url = "2"
httpcodec = "0"
derive_more = "0"
tokio-io-timeout = "1"
tracing = "0"
tracing-subscriber = { version = "0", features = ["chrono", "json"] }
tracing-appender = "0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"